--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,61 +1,25 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "zarrify"
-dynamic = ["version"]
-description = ''
-readme = "README.md"
-requires-python = ">=3.8"
-license = "MIT"
-keywords = []
+version = "0.1.0"
+description = ""
 authors = [
-  { name = "Yurii Zubov", email = "zubov452@gmail.com" },
+    {name = "Yurii Zubov",email = "zubov452@gmail.com"}
 ]
-classifiers = [
-  "Development Status :: 4 - Beta",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: Implementation :: CPython",
-  "Programming Language :: Python :: Implementation :: PyPy",
-]
-dependencies = []
-
-[project.urls]
-Documentation = "https://github.com/Yurii Zubov/zarrify#readme"
-Issues = "https://github.com/Yurii Zubov/zarrify/issues"
-Source = "https://github.com/Yurii Zubov/zarrify"
-
-[tool.hatch.version]
-path = "src/dask_zarrify/__about__.py"
-
-[tool.hatch.envs.types]
-extra-dependencies = [
-  "mypy>=1.0.0",
-]
-[tool.hatch.envs.types.scripts]
-check = "mypy --install-types --non-interactive {args:src/dask_zarrify tests}"
-
-[tool.coverage.run]
-source_pkgs = ["dask_zarrify", "tests"]
-branch = true
-parallel = true
-omit = [
-  "src/dask_zarrify/__about__.py",
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "zarr (>=3.0.0,<4.0.0)",
+    "mrcfile (>=1.5.3,<2.0.0)",
+    "dask-jobqueue (==0.8.2)",
+    "colorama (>=0.4.6,<0.5.0)",
+    "imagecodecs (>=2024.12.30,<2025.0.0)",
+    "dask (>=2024.12.1,<2025.0.0)",
+    "tifffile (>=2025.1.10,<2026.0.0)",
+    "natsort (>=8.4.0,<9.0.0)",
+    "click (>=8.1.8,<9.0.0)"
 ]
 
-[tool.coverage.paths]
-dask_zarrify = ["src/dask_zarrify", "*/zarrify/src/dask_zarrify"]
-tests = ["tests", "*/zarrify/tests"]
 
-[tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
-]
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
