--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "zarr (>=3.0.0,<4.0.0)",
+    "zarr (==2.16.1)",
     "mrcfile (>=1.5.3,<2.0.0)",
     "dask-jobqueue (==0.8.2)",
     "colorama (>=0.4.6,<0.5.0)",
@@ -18,7 +18,8 @@ dependencies = [
     "natsort (>=8.4.0,<9.0.0)",
     "click (>=8.1.8,<9.0.0)"
 ]
-
+[project.scripts]
+zarrify = "zarrify.to_zarr:cli"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
