--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
 [project.scripts]
 zarrify = "zarrify.to_zarr:cli"
 
+[project.optional-dependencies]
+test = ["pytest"]
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
