--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ dependencies = [
     "natsort (>=8.4.0,<9.0.0)",
     "click (>=8.1.8,<9.0.0)"
 ]
+
+[project.optional-dependencies]
+test = ["pytest"]
+
 [project.scripts]
 zarrify = "zarrify.to_zarr:cli"
 
