--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,8 +24,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install . pytest --no-cache-dir --verbose
+              python -m pip install --upgrade pip
+              pip install pytest
+              pip install . --no-cache-dir --verbose
 
       - name: Run tests
         run: |
