--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install . pytest --no-cache-dir --verbose
+          pip install .[test] --no-cache-dir --verbose
 
       - name: Run tests
         run: |
