--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,5 @@ test = [
 ]
 
 [build-system]
-requires = [
-    "poetry-core>=2.0.0,<3.0.0"
-]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
