--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "mrcfile>=1.5.3,<2.0.0",
     "natsort>=8.4.0,<9.0.0",
     "tifffile>=2025.1.10,<2026.0.0",
-    "zarr==2.16.1"
+    "zarr==2.18.3",
 ]
 
 [project.scripts]
