--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "natsort>=8.4.0,<9.0.0",
     "tifffile>=2025.1.10,<2026.0.0",
     "zarr==2.18.3",
+    "numcodecs==0.15.1"
 ]
 
 [project.scripts]
