--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,11 @@ dependencies = [
     "imagecodecs>=2024.12.30,<2025.0.0",
     "mrcfile>=1.5.3,<2.0.0",
     "natsort>=8.4.0,<9.0.0",
+    "numcodecs==0.15.1",
+    "pydantic-zarr>=0.4.0,<1.0.0",
+    "pint>=0.20.0,<1.0.0",
     "tifffile>=2025.1.10,<2026.0.0",
-    "zarr==2.18.3",
-    "numcodecs==0.15.1"
+    "zarr==2.18.3"
 ]
 
 [project.scripts]
