--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "imagecodecs>=2024.12.30,<2025.0.0",
     "mrcfile>=1.5.3,<2.0.0",
     "natsort>=8.4.0,<9.0.0",
-    "numcodecs==0.15.1",
+    "numcodecs>=0.13.0,<0.16",
     "pydantic-zarr>=0.4.0,<1.0.0",
     "pint>=0.20.0,<1.0.0",
     "tifffile>=2025.1.10,<2026.0.0",
