--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,11 @@ dependencies = [
     "mrcfile>=1.5.3,<2.0.0",
     "natsort>=8.4.0,<9.0.0",
     "numcodecs>=0.13.0,<0.16",
-    "pydantic-zarr>=0.4.0,<1.0.0",
+    "pydantic-zarr==0.6.0",
     "pint>=0.20.0,<1.0.0",
     "tifffile>=2025.1.10,<2026.0.0",
-    "zarr==2.18.3"
+    "zarr==2.18.3",
+    "bokeh>=3.1.0"
 ]
 
 [project.scripts]
