--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ platforms = ["linux-64"]
 
 [tool.pixi.tasks]
 dev-install = "pip install -e ."
+zarrify = { cmd = "zarrify", depends-on = ["dev-install"] }
 test = "pytest"
 clean = "rm -rf build/ dist/ *.egg-info/ .pytest_cache/ __pycache__/ dask_dashboard_link.txt"
 
