--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "click>=8.1.8,<9.0.0",
     "colorama>=0.4.6,<0.5.0", 
     "dask>=2024.12.1,<2025.0.0",
-    "dask-jobqueue==0.8.2",
+    "dask-jobqueue==0.9.0",
     "imagecodecs>=2024.12.30,<2025.0.0",
     "mrcfile>=1.5.3,<2.0.0",
     "natsort>=8.4.0,<9.0.0",
@@ -48,14 +48,16 @@ test = [
 
 [tool.pixi.project]
 channels = ["conda-forge"]
-platforms = ["linux-64"]
-
+platforms = ["osx-64", "osx-arm64", "linux-64"]
 [tool.pixi.tasks]
 dev-install = "pip install -e ."
 zarrify = { cmd = "zarrify" }
 zarr-multiscale = { cmd = "zarr-multiscale" }
 test = "pytest"
 clean = "rm -rf build/ dist/ *.egg-info/ .pytest_cache/ __pycache__/ dask_dashboard_link.txt"
+
+[tool.pixi.feature.test.dependencies]
+pytest = "*"
 
 [tool.pixi.feature.test.tasks]
 test-install = "pip install -e ."
@@ -68,4 +70,3 @@ test = { features = ["test"], solve-group = "default" }
 [tool.pixi.dependencies]
 python = "3.12.*"
 pip = ">=25.2,<26"
-
